Autenticação funcionando, falta configurar apenas as permissões das url´s

--- a/infrastructure/src/main/resources/application.yml
+++ b/infrastructure/src/main/resources/application.yml
@@ -5,5 +5,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/hospitalReportingSystem
     username: postgres
     password: postgres
+api:
+  security:
+    secret: my-secret
 server:
   port: 8080
